--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ body{
 }
 .home-button  {
     height: 50px;
-    width: 15 0px;
+    width: 150px;
     font-size: 16px;
     border: 0px;
     border-radius: 8px;
@@ -175,7 +175,7 @@ body{
     float: left;
     text-align: center;
     height: 250px;
-    width: 25%;
+    width: 30%;
     background-color: #e7f1f8;
     border: 1px solid rgb(83, 188, 230);
     border-radius: 15px;
@@ -507,7 +507,7 @@ body{
     width: 70%;
     margin: 50px auto;
     overflow: auto;
-    height: 60%;
+    height: 65%;
 }
 
 .price-model{
